# cqs

./: .changelog-draft-v1.43.0.md  .cqsignore  .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PRIVACY.md  PROJECT_CONTINUITY.md  PROJECT_CONTINUITY_2026-01-31.md  PROJECT_CONTINUITY_2026-01-31T0215Z.md  PROJECT_CONTINUITY_ARCHIVE.md  PROJECT_CONTINUITY_ARCHIVE_2026-01-31T0215Z.md  README.md  ROADMAP.md  SECURITY.md  cq-design-v6.md  deny.toml  pr_body.md
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: adequacy-auditor.md  auditor.md  code-reviewer.md  explorer.md  implementer.md  interleaving-auditor.md  investigator.md  lane-implementer.md  legacy-state-auditor.md  property-auditor.md  red-team-auditor.md  seam-auditor.md  spec-fidelity-auditor.md  sweep-auditor.md  test-finder.md
.claude/hooks/: pre-edit-context.py  pre-edit-impact.py  pre-edit-impact.sh  stop-review.sh
.claude/workflows/: audit.js
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-slow.yml  ci.yml  dependency-review.yml  release.yml  slow-tests.yml
cqs-macros/: Cargo.toml
cqs-macros/src/: lib.rs
docs/: AUDIT_2026-01-30_DEPS.md  AUDIT_2026-01-31.md  AUDIT_2026-01-31_16CAT.md  AUDIT_2026-01-31_18CAT.md  AUDIT_2026-01-31_v2.md  AUDIT_2026-02-01_18CAT.md  DESIGN_SPEC_27k_tokens.md  HUNCHES.md  MOONSHOT.md  SCARS.md  SESSION_CONTEXT.md  audit-batch1-api-design.md  audit-batch1-code-quality.md  audit-batch1-documentation.md  audit-batch1-error-handling.md  audit-batch1-observability.md  audit-batch1-robustness.md  audit-batch1-scaling.md  audit-batch1-test-coverage-adversarial.md  audit-batch2-algorithm-correctness.md  audit-batch2-data-safety.md  audit-batch2-extensibility.md  audit-batch2-performance.md  audit-batch2-platform.md  audit-batch2-resource-management.md  audit-batch2-security.md  audit-batch2-test-coverage-happy.md  audit-findings-2026-02-04.md  audit-findings-v0.12.1-pre.md  audit-findings-v0.12.1.md  audit-findings-v0.12.12-pre.md  audit-findings-v0.13.1.md  audit-findings-v0.19.0-pre.md  audit-findings-v0.19.4.md  audit-findings-v0.26.0-pre.md  audit-findings-v0.28.1.md  audit-findings-v0.28.3.md  audit-findings-v0.9.1.md  audit-findings-v1.0.5.md  audit-findings-v1.12.0.md  (+48 more)
docs/audit-fix-scratch/: p3-p4.md
docs/audit-fix-scratch-v1.33.0/: p1.md  p2-a.md  p2-b.md
docs/audit-scratch/: batch1-api-design.md  batch1-code-quality.md  batch1-documentation.md  batch1-error-handling.md  batch1-observability.md  batch1-robustness.md  batch1-scaling.md  batch1-test-coverage-adversarial.md  batch2-algorithm.md  batch2-data-safety.md  batch2-extensibility.md  batch2-performance.md  batch2-platform.md  batch2-resources.md  batch2-security.md  batch2-test-coverage-happy.md
docs/audit-scratch-v1.30.0/: batch1-documentation.md  batch1-test-coverage-adversarial.md  batch2-platform.md  batch2-security.md
docs/audit-scratch-v1.33.0/: batch1-code-quality.md  batch1-error-handling.md  batch1-robustness.md  batch2-algorithm.md  batch2-data-safety.md  batch2-extensibility.md  batch2-performance.md  batch2-resources.md  batch2-test-coverage-happy.md
docs/audit-scratch-v1.42.0/: batch1-error-handling.md  batch1-scaling.md  batch2-data-safety.md  batch2-performance.md  batch2-security.md
docs/design/: 1126-1127-lock-topology.md
docs/plans/: 2026-02-04-20-category-audit-design.md  2026-02-04-audit-mode-design.md  2026-02-08-markdown-indexing-design.md  2026-02-13-audit-v0.12.3-fixes.md  (+36 more)
evals/: alpha_sweep_v3.py  alpha_sweep_v3_r5.py  analyze_telemetry.py  audit_r5_failure_modes.py  baseline_v4_eval.py  build_contrastive_shards.py  build_pools.py  build_reranker_train.py  calibrate_reranker_labels.py  centroid_classifier.py  classifier_ab_eval.py  claude_client.py  colbert_rerank_eval.py  consensus_v3.py  diagnose.py  distilled_head_ab_daemon.py  distilled_head_ab_eval.py  fused_head_ab_eval.py  generate_from_chunks.py  generate_queries.py  heartbeat.sh  hyde_per_category_eval.py  label_reranker_v3.py  label_telemetry_queries.py  llm_client.py  measure_gemma_classify_accuracy.py  merge_v3.py  note_boost_ab_eval.py  performance-v1.27.0.json  regenerate_v3_test.py  rerank_ab_eval.py  rerank_ab_oracle_eval.py  reranker_v2_dev.jsonl  reranker_v2_test.jsonl  reranker_v2_train.jsonl  run_ablation.py  run_alpha_sweep.sh  run_sweep.py  schema.rs  split_v4.py  (+7 more)
examples/: bench_embed.rs  exp_level_scale.rs
research/: models.md
scripts/: check_comment_provenance.py  check_daemon_cwd.py  clean_md.py  pdf_to_md.py  run_real_eval.py  run_umap.py
src/: audit.rs  aux_model.rs  cache.rs  cagra.rs  ci.rs  cli.rs  config.rs  daemon_translate.rs  diff.rs  diff_parse.rs  drift.rs  embedder.rs  focused_read.rs  fs.rs  gather.rs  health.rs  hnsw.rs  hunch.rs  impact.rs  index.rs  kind.rs  lib.rs  limits.rs  llm.rs  main.rs  math.rs  mcp.rs  nl.rs  note.rs  onboard.rs  ort_helpers.rs  output_format.rs  parser.rs  plan.rs  posture.rs  project.rs  reference.rs  related.rs  reranker.rs  review.rs  (+16 more)
tests/: batch_handlers_test.rs  ci_test.rs  classifier_audit.rs  cli_batch_test.rs  cli_blame_test.rs  cli_brief_test.rs  cli_cache_test.rs  cli_chat_completer_test.rs  cli_chat_format_test.rs  cli_commands_test.rs  cli_convert_test.rs  cli_dead_test.rs  cli_doc_injection_relay_test.rs  cli_doctor_fix_test.rs  cli_drift_diff_test.rs  cli_envelope_test.rs  cli_eval_freshness_gate_test.rs  cli_eval_reranker_test.rs  cli_explain_test.rs  cli_gather_test.rs  cli_gc_test.rs  cli_graph_test.rs  cli_health_test.rs  cli_hook_test.rs  cli_index_drift_test.rs  cli_mcp_bridge_test.rs  cli_neighbors_test.rs  cli_notes_test.rs  cli_project_search_test.rs  cli_reconstruct_test.rs  cli_ref_reindex_validation_test.rs  cli_ref_test.rs  cli_review_test.rs  cli_serve_test.rs  cli_similar_test.rs  cli_slot_test.rs  cli_status_test.rs  cli_surface_test.rs  cli_telemetry_render_test.rs  cli_telemetry_reset_test.rs  (+62 more)
(+744 files in other folders)
