[package]
name = "cqs-macros"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "Internal proc-macros for the cqs crate. Not published — workspace-local only."
license = "MIT"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
