[package]
name = "cqs-macros"
version = "0.1.1"
edition = "2021"
rust-version = "1.95"
description = "Internal proc-macros for the cqs crate. The `#[derive(CqsCommands)]` and supporting attribute macros that wire CLI command variants to their dispatchers; not a standalone reusable library."
license = "MIT"
repository = "https://github.com/jamie8johnson/cqs"
keywords = ["cqs", "proc-macro"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
